--- a/expandablecardview/src/main/res/layout/expandable_cardview.xml
+++ b/expandablecardview/src/main/res/layout/expandable_cardview.xml
@@ -26,9 +26,11 @@
                 android:id="@+id/card_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:layout_marginStart="15dp"
+                android:background="#00FFFFFF"
                 android:contentDescription="@string/expandable_card_view_icon_content_description"
-                android:visibility="gone" />
+                android:visibility="visible" />
 
             <TextView
                 android:id="@+id/card_title"
